# micromega-plugin

./: .gitignore  CREDITS  INSTALL.md  Makefile  README-developers.md  README.md  default.nix  dune  dune-project  micromega-plugin.opam  rocq-micromega-plugin
.github/workflows/: nix-action-rocq-9.0.yml  nix-action-rocq-9.1.yml  nix-action-rocq-9.2.yml  nix-action-rocq-master.yml
.nix/: config.nix  coq-nix-toolbox.nix
src/: certificate.ml  coq_micromega.ml  coq_micromega.mli  dune  g_micromega.mlg  g_tify.mlg  g_zify.mlg  tify.ml  tify.mli  zify.ml  zify.mli
test-suite/: Makefile  witness_tactics.v
theories/: ListDef.v  NatDef.v  PosDef.v  RatDef.v  Tify.v  Zify.v  _CoqProject  checker.v  dune  eval.v  field_checker.v  field_eval.v  formula.v  ring_checker.v  ring_eval.v  tactics.v  witness.v
