(library
 (name micromega_ml_plugin)
 (modules (:standard \ csdpcert g_zify zify))
 (public_name micromega-plugin.plugin)
 (flags :standard -w -27)
 (preprocess
  (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~rocq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries rocq-runtime.plugins.ltac rocq-runtime.vernac))

(library
 (name zify_ml_plugin)
 (public_name micromega-plugin.zify)
 (modules g_zify zify)
 (preprocess
  (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~rocq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries rocq-runtime.plugins.ltac))

(coq.pp
 (modules g_micromega g_zify))
