(library
 (name micromega_ml_plugin)
 (modules (:standard \ csdpcert g_tify tify))
 (public_name micromega-plugin.plugin)
 (flags :standard -w -27)
 (preprocess
  (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~rocq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries rocq-runtime.plugins.ltac rocq-runtime.vernac))

(library
 (name tify_ml_plugin)
 (public_name micromega-plugin.tify)
 (modules g_tify tify)
 (preprocess
  (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~rocq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries rocq-runtime.plugins.ltac))

(coq.pp
 (modules g_micromega g_tify))
